Inicia alteracao para uso de tratamento de erro do tsoa
